--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,47 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-image: url('./guessss.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh; /* Adjust this as needed */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img {
+  width: 200px;
+  height: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1, h2{
+  color: rgb(86, 4, 86);
+}
+
+.container{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  /* background-color: white; */
+  /* width: 700px; */
 }
 
-.App-link {
-  color: #61dafb;
+.container input{
+  border-radius: 10px;
+  width: 200px;
+  height: 25px;
+  margin: 10px 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container button{
+  border-radius: 5px;
+  width: 200px;
+  height: 25px;
+  margin: 10px 10px;
+  background-color: rgb(255, 157, 0);
+}
+
+.container button:hover{
+  background-color: rgba(255, 157, 0, 0.413);
+  cursor: pointer;
 }
